# leo_robot

./: .pylintrc  LICENSE  README.md
.github/workflows/: ci-noetic.yml
leo_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
leo_bringup/config/: core2.yaml  firmware.yaml  firmware_message_converter.yaml
leo_bringup/config/motors/: buehler.yaml  pololu.yaml
leo_bringup/launch/: leo_bringup.launch
leo_bringup/scripts/: leo_system
leo_firmware/: CMakeLists.txt  package.xml
leo_fw/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
leo_fw/firmware/: memory_content  memory_content.hex
leo_fw/scripts/: calibrate_imu  flash  test_hw  update  validate
leo_fw/src/: firmware_message_converter.cpp  firmware_message_parser.cpp
leo_fw/src/leo_fw/: __init__.py  board.py  flash.py  main.py  test_hw.py  utils.py  validate.py
leo_fw/test_data/: battery.yaml  encoder.yaml  encoder_load.yaml  imu.yaml  torque.yaml  torque_load.yaml
leo_fw/validate/: battery.yaml  imu.yaml  motor.yaml  motor_load.yaml
leo_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
