<?xml version="1.0"?>
<package format="2">
  <name>leo_bringup</name>
  <version>2.0.1</version>
  <description>
    Scripts and launch files for starting basic Leo Rover functionalities. 
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/leo_bringup</url>
  <url type="bugtracker">https://github.com/LeoRover/leo_robot/issues</url>
  <url type="repository">https://github.com/LeoRover/leo_robot</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>web_video_server</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>leo_description</exec_depend>
  <exec_depend>leo_fw</exec_depend>

  <!-- <exec_depend>raspicam_node</exec_depend> -->

</package>
