<?xml version="1.0"?>
<package format="3">
  <name>leo_fw</name>
  <version>2.0.1</version>
  <description>
    Binary releases of Leo Rover firmware and related utilities
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <author email="blazej@fictionlab.pl">Błażej Sowa</author>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/leo_fw</url>
  <url type="bugtracker">https://github.com/LeoRover/leo_robot/issues</url>
  <url type="repository">https://github.com/LeoRover/leo_robot</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-setuptools</buildtool_depend>

  <exec_depend>python3-whichcraft</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rosgraph</exec_depend>
  <exec_depend>rosnode</exec_depend>
  <exec_depend>rosservice</exec_depend>

  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rosmon_msgs</exec_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <depend>leo_msgs</depend>

</package>